@@ -1,5 +1,9 @@
 Changelog for Discuss.
 
+- Add ability to discussLogin post login hook to redirect back to prior location based on sessionPlace
+- Update sessionPlace to include page number on boards, threads.
+- Refactor disBoard.getLastPostTitle to disBoard.getLastPostTitleSlug
+
 Discuss 1.0.0
 ====================================
 - Add Thread types
